--- a/bitdash/commercial-auth.html
+++ b/bitdash/commercial-auth.html
@@ -68,11 +68,7 @@ async function routeByPremium(email, premium){
 }
 
 async function checkExistingLogin(){
-  try {
-    const j = await api('/auth/me');
-    const email = j?.user?.email || '';
-    await routeByPremium(email, !!j?.premium);
-  } catch {}
+  // desativado para evitar redirecionamento automático/flicker
 }
 
 async function loginWithGoogleCredential(credential){
@@ -127,7 +123,7 @@ function initGoogleLogin(attempt = 0){
 
   window.google.accounts.id.initialize({
     client_id: GOOGLE_CLIENT_ID,
-    auto_select: true,
+    auto_select: false,
     callback: (resp) => loginWithGoogleCredential(resp.credential),
   });
 
@@ -140,11 +136,9 @@ function initGoogleLogin(attempt = 0){
     shape: 'pill',
   });
 
-  // tenta usar a conta Google já logada no dispositivo
-  window.google.accounts.id.prompt();
+  // sem prompt automático para evitar navegação involuntária
 }
 
-checkExistingLogin();
 initGoogleLogin();
 </script>
 </body>
