--- a/bitdash/commercial-add-assets.html
+++ b/bitdash/commercial-add-assets.html
@@ -110,6 +110,22 @@ async function api(path, method='GET', body){
   return j;
 }
 
+
+function parseLocalSession(){
+  try {
+    const token = String(localStorage.getItem('bitdash_auth_token') || '').trim();
+    if (!token) return null;
+    const body = token.split('.')[0] || '';
+    if (!body) return null;
+    const b64 = body.replace(/-/g,'+').replace(/_/g,'/');
+    const pad = b64.length % 4 ? '='.repeat(4 - (b64.length % 4)) : '';
+    const payload = JSON.parse(atob(b64 + pad));
+    if (!payload?.email) return null;
+    if (payload?.exp && Date.now() > Number(payload.exp)) return null;
+    return { email: String(payload.email).toLowerCase(), name: payload.name || null };
+  } catch { return null; }
+}
+
 function getLocalPremiumEmail(){
   const e = String(localStorage.getItem('bitdash_local_user') || '').trim().toLowerCase();
   return e || null;
@@ -118,15 +134,12 @@ function getLocalPremiumEmail(){
 async function updateTopAuthState(){
   const loginBtn = document.getElementById('loginTopBtn');
   const logoutBtn = document.getElementById('logoutTopBtn');
-  try {
-    const me = await api('/auth/me');
-    const email = me?.user?.email || '';
-    if (email) {
-      loginBtn.textContent = `Premium: ${email}`;
-      logoutBtn.classList.remove('hidden');
-      return true;
-    }
-  } catch {}
+  const s = parseLocalSession();
+  if (s?.email) {
+    loginBtn.textContent = `Premium: ${s.email}`;
+    logoutBtn.classList.remove('hidden');
+    return true;
+  }
   loginBtn.textContent = 'Login Premium';
   logoutBtn.classList.add('hidden');
   return false;
@@ -302,14 +315,9 @@ document.getElementById('confirmBtn').onclick = async () => {
     try { localStorage.setItem('bitdash_portfolio_draft', payload); } catch {}
     try { localStorage.removeItem('bitdash_portfolio_cleared'); } catch {}
 
-    // remoto com erro explícito quando usuário estiver autenticado
-    let loggedEmail = '';
-    try {
-      const me = await api('/auth/me');
-      loggedEmail = String(me?.user?.email || '').trim();
-    } catch {}
-
-    if (loggedEmail) {
+    // remoto com erro explícito quando houver sessão local
+    const sess = parseLocalSession();
+    if (sess?.email) {
       await api('/portfolio','POST',{ portfolio: merged });
       status.textContent = 'Ativos adicionados e carteira salva na nuvem.';
     } else {
@@ -335,16 +343,18 @@ document.getElementById('logoutTopBtn').onclick = async ()=>{
 document.getElementById('clearTopBtn').onclick = async ()=>{
   const ok = confirm('Tem certeza que deseja limpar a carteira?');
   if (!ok) return;
-  try {
-    const me = await api('/auth/me');
-    if (me?.user?.email) {
+  const sess = parseLocalSession();
+  if (sess?.email) {
+    try {
       await api('/portfolio','POST',{ portfolio: [] });
       try { localStorage.setItem('bitdash_portfolio_draft', JSON.stringify([])); } catch {}
       try { localStorage.setItem('bitdash_portfolio_cleared', '1'); } catch {}
       alert('Carteira limpa com sucesso.');
       return;
+    } catch (e) {
+      alert('Falha ao limpar na nuvem: ' + (e.message || e));
     }
-  } catch {}
+  }
   try { sessionStorage.setItem('freePortfolio', JSON.stringify([])); } catch {}
   try { localStorage.setItem('bitdash_portfolio_draft', JSON.stringify([])); } catch {}
   try { localStorage.setItem('bitdash_portfolio_cleared', '1'); } catch {}
