--- a/bitdash/commercial-add-assets.html
+++ b/bitdash/commercial-add-assets.html
@@ -35,7 +35,10 @@
       white-space:normal;
     }
     .tooltip-wrap:hover .tooltip,.tooltip-wrap.open .tooltip{display:block}
-  </style>
+  
+    #diagPanel{margin-top:12px;padding:10px;border:1px dashed #3d58a6;border-radius:10px;background:#0a132e;color:#bcd0ff;font:12px/1.4 ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;white-space:pre-wrap;display:none}
+    #diagPanel.show{display:block}
+    </style>
 </head>
 <body>
   <div class="topbar">
@@ -88,10 +91,46 @@
         <button id="confirmBtn" disabled>Confirmar e enviar para precificação</button>
       </div>
     </div>
+  <pre id="diagPanel"></pre>
   </div>
 
 <script>
 const API = (window.BITDASH_API_URL || 'https://bitdash-api.crlages.workers.dev').replace(/\/$/, '');
+
+const DIAG = new URL(location.href).searchParams.get('diag') === '1' || localStorage.getItem('bitdash_diag') === '1';
+if (new URL(location.href).searchParams.get('diag') === '1') { try { localStorage.setItem('bitdash_diag','1'); } catch {} }
+function parseTokenLocal(){
+  try {
+    const token = String(localStorage.getItem('bitdash_auth_token') || '').trim();
+    if (!token) return { tokenPresent:false };
+    const body = token.split('.')[0] || '';
+    const b64 = body.replace(/-/g,'+').replace(/_/g,'/');
+    const pad = b64.length % 4 ? '='.repeat(4 - (b64.length % 4)) : '';
+    const payload = JSON.parse(atob(b64 + pad));
+    return {
+      tokenPresent:true,
+      email: payload?.email || null,
+      expIso: payload?.exp ? new Date(Number(payload.exp)).toISOString() : null,
+      expired: payload?.exp ? Date.now() > Number(payload.exp) : null,
+      len: token.length,
+    };
+  } catch (e) { return { tokenPresent:true, parseError:String(e.message||e) }; }
+}
+function renderDiag(extra={}){
+  if (!DIAG) return;
+  const el = document.getElementById('diagPanel');
+  if (!el) return;
+  el.classList.add('show');
+  const base = {
+    page: location.pathname,
+    api: API,
+    ts: new Date().toISOString(),
+    localUser: localStorage.getItem('bitdash_local_user') || null,
+    ...parseTokenLocal(),
+    ...extra,
+  };
+  el.textContent = '[BITDASH DIAG]\n' + JSON.stringify(base, null, 2);
+}
 
 function bootstrapSessionFromUrl(){
   try {
@@ -118,7 +157,8 @@ async function api(path, method='GET', body){
   });
   let j={}; try{ j=await r.json(); }catch{}
   if (j?.token) { try { localStorage.setItem('bitdash_auth_token', j.token); } catch {} }
-  if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
+  if(!r.ok || j.ok===false) { renderDiag({ apiPath:path, apiStatus:r.status, apiOk:false, apiError:j.error || `http_${r.status}` }); throw new Error(j.error || `http_${r.status}`); }
+  renderDiag({ apiPath:path, apiStatus:r.status, apiOk:true });
   return j;
 }
 
@@ -373,7 +413,11 @@ document.getElementById('clearTopBtn').onclick = async ()=>{
 };
 
 bootstrapSessionFromUrl();
-updateTopAuthState();
+renderDiag({ stage:'add-init' });
+(async ()=>{
+  updateTopAuthState();
+  try { const me = await api('/auth/me'); renderDiag({ stage:'add-auth-me', meOk: !!me?.ok, meEmail: me?.user?.email || null }); } catch(e){ renderDiag({ stage:'add-auth-me-fail', err:String(e.message||e) }); }
+})();
 
 // Tooltip também no clique (mobile/touch)
 (function(){
