diag ux: make debug panel floating and always visible in ?diag=1 mode

--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -56,7 +56,7 @@
     .info-tip .tip-box{display:none;position:absolute;top:24px;left:0;z-index:20;width:min(420px,78vw);background:#0f1731;border:1px solid #3b56a2;border-radius:10px;padding:10px;color:#dce6ff;font-size:.86rem;line-height:1.35;box-shadow:0 10px 24px rgba(0,0,0,.35)}
     .info-tip:hover .tip-box,.info-tip.open .tip-box{display:block}
   
-    #diagPanel{margin-top:12px;padding:10px;border:1px dashed #3d58a6;border-radius:10px;background:#0a132e;color:#bcd0ff;font:12px/1.4 ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;white-space:pre-wrap;display:none}
+    #diagPanel{position:fixed;right:12px;bottom:12px;width:min(520px,92vw);max-height:46vh;overflow:auto;padding:10px;border:1px dashed #3d58a6;border-radius:10px;background:#0a132e;color:#bcd0ff;font:12px/1.4 ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;white-space:pre-wrap;display:none;z-index:99999;box-shadow:0 8px 30px rgba(0,0,0,.45)}
     #diagPanel.show{display:block}
     </style>
 </head>
