ui auth state: derive premium label directly from token at render time

--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -277,7 +277,10 @@ async function api(path, method='GET', body){
   return j;
 }
 
-function isPremium(){ return !!currentUser?.email; }
+function isPremium(){
+  const s = parseLocalSession();
+  return !!s?.email;
+}
 
 function mergePortfolio(base=[], inbound=[]){
   const m = new Map();
@@ -372,7 +375,9 @@ async function fetchLivePrice(asset){
 }
 
 function render(){
-  document.getElementById('authBtn').textContent = currentUser?.email ? `Premium: ${currentUser.email}` : 'Login Premium';
+  const sess = parseLocalSession();
+  if (sess?.email) currentUser = sess;
+  document.getElementById('authBtn').textContent = (sess?.email || currentUser?.email) ? `Premium: ${(sess?.email || currentUser?.email)}` : 'Login Premium';
   document.getElementById('saveBtn').classList.toggle('hidden', !isPremium());
   document.getElementById('logoutBtn').classList.toggle('hidden', !isPremium());
   document.getElementById('mode').textContent = isPremium()
@@ -710,6 +715,7 @@ window.addEventListener('resize', () => {
     return { ...x, ticker, cls: classify(ticker) };
   });
   render();
+  renderDiag({ stage:'dashboard-after-render', currentUser: currentUser?.email || null, premiumUi: isPremium() });
   try { const me = await api('/auth/me'); renderDiag({ stage:'dashboard-auth-me', meOk: !!me?.ok, meEmail: me?.user?.email || null }); } catch(e){ renderDiag({ stage:'dashboard-auth-me-fail', err:String(e.message||e) }); }
   // não bloqueia interface: inicia em paralelo
   refresh();
