--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -237,7 +237,10 @@ async function api(path, method='GET', body){
   return j;
 }
 
-function isPremium(){ return !!currentUser?.email; }
+function isPremium(){
+  const s = parseLocalSession();
+  return !!s?.email;
+}
 
 function mergePortfolio(base=[], inbound=[]){
   const m = new Map();
@@ -332,7 +335,9 @@ async function fetchLivePrice(asset){
 }
 
 function render(){
-  document.getElementById('authBtn').textContent = currentUser?.email ? `Premium: ${currentUser.email}` : 'Login Premium';
+  const sess = parseLocalSession();
+  if (sess?.email) currentUser = sess;
+  document.getElementById('authBtn').textContent = (sess?.email || currentUser?.email) ? `Premium: ${(sess?.email || currentUser?.email)}` : 'Login Premium';
   document.getElementById('saveBtn').classList.toggle('hidden', !isPremium());
   document.getElementById('logoutBtn').classList.toggle('hidden', !isPremium());
   document.getElementById('mode').textContent = isPremium()
