ui auth badge: force token/localUser-driven label sync on dashboard

--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -282,6 +282,18 @@ function isPremium(){
   return !!s?.email;
 }
 
+function syncAuthBadge(){
+  const btn = document.getElementById('authBtn');
+  if (!btn) return;
+  const sess = parseLocalSession();
+  const email = sess?.email || String(localStorage.getItem('bitdash_local_user') || '').trim().toLowerCase() || '';
+  btn.textContent = email ? `Premium: ${email}` : 'Login Premium';
+  const saveBtn = document.getElementById('saveBtn');
+  const logoutBtn = document.getElementById('logoutBtn');
+  if (saveBtn) saveBtn.classList.toggle('hidden', !email);
+  if (logoutBtn) logoutBtn.classList.toggle('hidden', !email);
+}
+
 function mergePortfolio(base=[], inbound=[]){
   const m = new Map();
   for (const a of base) {
@@ -377,9 +389,7 @@ async function fetchLivePrice(asset){
 function render(){
   const sess = parseLocalSession();
   if (sess?.email) currentUser = sess;
-  document.getElementById('authBtn').textContent = (sess?.email || currentUser?.email) ? `Premium: ${(sess?.email || currentUser?.email)}` : 'Login Premium';
-  document.getElementById('saveBtn').classList.toggle('hidden', !isPremium());
-  document.getElementById('logoutBtn').classList.toggle('hidden', !isPremium());
+  syncAuthBadge();
   document.getElementById('mode').textContent = isPremium()
     ? 'Modo premium: pode salvar e recuperar depois.'
     : 'Modo grátis: ao sair do site, os dados podem ser perdidos (amostra).';
@@ -715,11 +725,13 @@ window.addEventListener('resize', () => {
     return { ...x, ticker, cls: classify(ticker) };
   });
   render();
-  renderDiag({ stage:'dashboard-after-render', currentUser: currentUser?.email || null, premiumUi: isPremium() });
+  renderDiag({ stage:'dashboard-after-render', currentUser: currentUser?.email || null, premiumUi: isPremium(), authBtnText: (document.getElementById('authBtn')?.textContent || null) });
   try { const me = await api('/auth/me'); renderDiag({ stage:'dashboard-auth-me', meOk: !!me?.ok, meEmail: me?.user?.email || null }); } catch(e){ renderDiag({ stage:'dashboard-auth-me-fail', err:String(e.message||e) }); }
   // não bloqueia interface: inicia em paralelo
   refresh();
   setTimeout(loadNews, 150);
+  setTimeout(syncAuthBadge, 50);
+  setTimeout(syncAuthBadge, 500);
 })();
 </script>
 </body>
