--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -242,6 +242,18 @@ function isPremium(){
   return !!s?.email;
 }
 
+function syncAuthBadge(){
+  const btn = document.getElementById('authBtn');
+  if (!btn) return;
+  const sess = parseLocalSession();
+  const email = sess?.email || String(localStorage.getItem('bitdash_local_user') || '').trim().toLowerCase() || '';
+  btn.textContent = email ? `Premium: ${email}` : 'Login Premium';
+  const saveBtn = document.getElementById('saveBtn');
+  const logoutBtn = document.getElementById('logoutBtn');
+  if (saveBtn) saveBtn.classList.toggle('hidden', !email);
+  if (logoutBtn) logoutBtn.classList.toggle('hidden', !email);
+}
+
 function mergePortfolio(base=[], inbound=[]){
   const m = new Map();
   for (const a of base) {
@@ -337,9 +349,7 @@ async function fetchLivePrice(asset){
 function render(){
   const sess = parseLocalSession();
   if (sess?.email) currentUser = sess;
-  document.getElementById('authBtn').textContent = (sess?.email || currentUser?.email) ? `Premium: ${(sess?.email || currentUser?.email)}` : 'Login Premium';
-  document.getElementById('saveBtn').classList.toggle('hidden', !isPremium());
-  document.getElementById('logoutBtn').classList.toggle('hidden', !isPremium());
+  syncAuthBadge();
   document.getElementById('mode').textContent = isPremium()
     ? 'Modo premium: pode salvar e recuperar depois.'
     : 'Modo grátis: ao sair do site, os dados podem ser perdidos (amostra).';
@@ -677,6 +687,8 @@ window.addEventListener('resize', () => {
   // não bloqueia interface: inicia em paralelo
   refresh();
   setTimeout(loadNews, 150);
+  setTimeout(syncAuthBadge, 50);
+  setTimeout(syncAuthBadge, 500);
 })();
 </script>
 </body>
