--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -353,6 +353,7 @@ function render(){
   document.getElementById('mode').textContent = isPremium()
     ? 'Modo premium: pode salvar e recuperar depois.'
     : 'Modo grátis: ao sair do site, os dados podem ser perdidos (amostra).';
+  syncAuthBadge();
 
   const invFiis = document.getElementById('invFiis'); invFiis.innerHTML='';
   const invAcoes = document.getElementById('invAcoes'); invAcoes.innerHTML='';
@@ -689,6 +690,7 @@ window.addEventListener('resize', () => {
   setTimeout(loadNews, 150);
   setTimeout(syncAuthBadge, 50);
   setTimeout(syncAuthBadge, 500);
+  setInterval(syncAuthBadge, 1000);
 })();
 </script>
 </body>
