add flow: robust parser (TICKER/QTY and QTY/TICKER), default qty=1, explicit analyze/confirm feedback

--- a/bitdash/commercial-add-assets.html
+++ b/bitdash/commercial-add-assets.html
@@ -336,6 +336,7 @@ document.getElementById('confirmBtn').onclick = async () => {
   try {
     if (!approvedItems.length) {
       status.textContent = 'Nenhum ativo aprovado para envio.';
+      alert('Nenhum ativo aprovado. Clique em Analisar antes de confirmar.');
       return;
     }
 
@@ -376,6 +377,7 @@ document.getElementById('confirmBtn').onclick = async () => {
       status.textContent = 'Ativos adicionados localmente (sem login premium ativo).';
     }
 
+    alert('Ativo(s) enviado(s) com sucesso. Voltando ao dashboard...');
     location.href='commercial-dashboard.html';
   } catch (e) {
     status.textContent = 'Falha ao confirmar ativos: ' + (e.message || e);
